fix: 切换theme后刷新失效

--- a/src/App.less
+++ b/src/App.less
@@ -13,4 +13,19 @@ body,
 		justify-content: space-between;
 		align-items: center;
 	}
+	.semi-navigation-header-list-outer {
+		flex-grow: 1;
+		overflow-y: auto;
+		margin-right: -8px;
+	}
+}
+
+::-webkit-scrollbar-track {
+	background-color: var(--semi-color-fill-0);
+}
+::-webkit-scrollbar {
+	width: 4px
+}
+::-webkit-scrollbar-thumb {
+	background-color: var(--semi-color-fill-1);
 }
